tests/baselines/reference/staticPrototypeProperty.errors.txt
==== tests/cases/compiler/staticPrototypeProperty.ts (2 errors) ====
    class C {
       static prototype() { }
       ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2000: Duplicate identifier 'prototype'.
    }
     
    class C2 {
       static prototype;
              ~~~~~~~~~
!!! error TS2000: Duplicate identifier 'prototype'.
    }